--- a/style.css
+++ b/style.css
@@ -2,7 +2,15 @@ body {
     background-color: #E9C46A;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-
+h1 {
+    font-size: 300%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+   font-style: italic bold;
+    text-align: center;
+}
+h2{
+    text-align: center;
+}
 .pizzas{
     border: 8px solid #E76F51;
     border-radius: 1.2em;
@@ -10,7 +18,7 @@ body {
     margin: 1em;
     margin-bottom: 0.8em ;
     width: 20em;
-    display: inline-block;/
+    display: inline-block;
     min-height: 20em;
 }
 .small_pizza{
@@ -29,18 +37,22 @@ body {
 }
 
 .contact_details{
+    text-align: center;
     background-color: blanchedalmond;
+    border: 8px solid #E76F51;
+    border-bottom: 1.2em;
+    padding: 1em;
 }
 
 @media (min-width:760px) {
 
-    body {background-color: black;}
+    body {background-color: #CED4DA;}
 }
 
 @media (min-width:960px) {
     body {
-        background: #fff;
-    }
+        background: #E9FF70;
+    
 }
 .pizza {
     padding: 2em;
@@ -48,5 +60,6 @@ body {
 }
 
 .container {
-    display: flex;
+display: flex;
+ }
 }
